# CGT620-Graphics-Processing-Unit-Computing

./: .gitignore  README.md
final_project/: CMakeLists.txt  glad.c  main.cu
final_project/include/glad/: glad.h
final_project_1/include/: ZWEngine.h
final_project_1/src/: custom_func.cu  main.cu
lab1/: lab1_zhiquan.pptx
lab1/MatAdd/: MatAdd.sln
lab1/MatAdd/MatAdd/: MatAdd.vcxproj  main.cpp
lab2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  deviceQuery.cpp  exe  lab2  lab2.cbp  main  main.cu  query
lab3/: CMakeLists.txt  exe  main.cu  vis.py
lab4/: CMakeLists.txt  main.cu
lab5/: CMakeLists.txt
lab5/glsl/: fragment_shader.glsl  vertex_shader.glsl
lab5/include/: VertexArrayObject.h  ZWEngine.h
lab5/src/: ZWEngine.cpp  custom_func.cpp  custom_func.cu  main.cu
terrain_generator/: CMakeLists.txt  main.cu
terrain_generator/include/: PerlinNoise.cu  kernels.cuh  obj.h  terrain_manager.cuh  utils.cuh
untitled/: CMakeLists.txt  main.cu
